[package]
name = "perrydl-wasm"
version = "0.1.0"
edition = "2018"
description = "Perry Data representation Library WASM"
# The repository format below affects npm package.json, change carefully
repository = "ssh://git@github.com/pdcalado/perry.git"
license = "MIT"
publish = true

[profile.release]
lto = true
opt-level = "z"

[lib]
crate-type = ["cdylib"]

[features]
default = ["wee_alloc"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2.63"
wee_alloc = { version = "0.4", optional = true }
Inflector = "0.11"

[dev-dependencies]
jsonschema = "0.3"
